--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "string": "nodemon ./js/string1.js",
-    "number": "nodemon ./js/number.js",
+    "miniuzduotys": "nodemon ./js/miniuzduotys.js",
     "dev": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
