--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "miniuzduotys": "nodemon ./js/miniuzduotys.js",
+    "mini": "nodemon ./js/miniuzduotys.js",
     "dev": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
